Fix Observe highlight on dark mode

--- a/assets/style.css
+++ b/assets/style.css
@@ -194,7 +194,7 @@ body span.observe.key {
     color: #ffa500;
 }
 
-body td.observe {
+body td.observe, body.dark td.observe span {
     color: #ffa500;
 }
 
